Added verbosity option.
git-svn-id: https://jumble.svn.sourceforge.net/svnroot/jumble/trunk@210 3c96dea9-a453-4bd5-b869-110af7cb2dd7